--- a/Aulas_Django/basico/base/global/base.html
+++ b/Aulas_Django/basico/base/global/base.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">    
+    <link rel="stylesheet" href="{% static 'home/css/blue.css' %}">
+    
 </head>
 <body>
-    <h2>MEU BLOG</h2>
+    <h1>{% block  texto%}MINHA BASE{% endblock texto%} </h1>
 </body>
 </html>
